# fastid

./: Cargo.toml  README.md  fastid.pyi  pkpy.pyi  pyproject.toml
.github/workflows/: CI.yml
python/test/: test_fastid.py
python/tests/: test.py
src/: lib.rs  objectid.rs
