[package]
name = "fastid"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fastid"
crate-type = ["cdylib"]


[dependencies]
ulid="1.1.0"
pyo3="0.20.0"
rs-snowflake = "0.6.0"
once_cell = "1.19.0"
rand = "0.8.5"
hex = "0.4.3"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v7",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
