[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "fastid"
description = "This is a library for quickly generating unique IDs in Python."
authors = [{ name = "Seungwoo Hong", email = "qksn1541@gmail.com" }]
requires-python = ">=3.8"
keywords = ["unique-id", "id-generator"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
